<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Synak time</string>


    <string name="retry">Retry</string>
    <string name="post_error">An error occurred while loading the posts</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="pick_photo_from_gallery">Галерея</string>
    <string name="pick_photo_from_camera">Камера</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_user_name">Имя полььзователя</string>
    <string name="nav_header_desc">Navigation header</string>


    <!-- TODO: Не надо переводить что сверху -->
    <string name="menu_profile">Профиль</string>
    <string name="menu_ORT">ОРТ</string>
    <string name="menu_KTMU">КТМУ Манас</string>
    <string name="menu_preparation">Подготовка к ОРТ</string>
    <string name="menu_logic">Логика</string>
    <string name="menu_colleges">Высшие Учебные Заведения (ВУЗы)</string>
    <string name="sign_in">Вход</string>
    <string name="i_need_to_register">Регистрация</string>
    <string name="todo">TODO</string>
    <string name="user_name">Имя пользователя</string>
    <string name="nav_user_rank">Рейтинг: 1</string>
    <string name="action_log_out">Выход с аккаунта</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blog">Форум</string>
    <string name="game">Игра</string>
    <string name="language">Язык</string>
    <string name="menu_news">Новости</string>
    <string name="menu_games">Игры</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_exit">Выход</string>
    <string name="btn_accept">подтвердить</string>
    <string name="password">Пароль</string>
    <string name="auth">Авторизация</string>
    <string name="phone">Номер телефона (+996)</string>
    <string name="result">Вы заработали:</string>
    <string name="nickname">Никнейм</string>
    <string name="register">Регистрация</string>
    <string name="repair_password">Повторите пароль</string>
    <string name="birth">Выберите дату рождения</string>
    <string name="btn_register">зарегистрироваться</string>
    <string name="hint_message">Напишите сообщение</string>
    <string name="btn_send">отправить</string>
    <string name="btn_save">Сохранить</string>
    <string name="lang">Язык</string>
    <string name="games">Дуэль</string>
    <string name="day_quiz">Задача дня</string>
    <string name="settings">Настройки</string>
    <string name="lgin">Логин</string>
    <string name="regisre">Регистрация</string>
    <string name="choose_part">Выберите предмет</string>
    <string name="news">Новости</string>
    <string name="ort">Подготовка к ОРТ</string>
    <string name="total_point">Общая сумма баллов: </string>
    <string name="today_point">Баллы за сегодня: </string>
    <string name="svyaz">Напишите нам </string>
    <string name="univer">Университеты</string>
    <string name="vy_poluchili" tools:ignore="MissingTranslation">Вы получили:</string>
    <string name="dalee">Далее</string>
    <string name="new_password">Смена пароля</string>
    <string name="accont_not_exist">Такого аккаунта не существует</string>
    <string name="empty_password">Пароль не может быть пустым</string>
    <string name="no_password">Пароли не совпадают</string>
    <string name="confirm_code">Подтверждение кода</string>
    <string name="phone_incorrect">Формат телефонного номера введен неправильно.</string>
    <string name="enter_code">Наберите Код</string>
    <string name="date_incorrect">Выберите дату рождения</string>
    <string name="account_registered">Такой пользователь уже зарегистрирован</string>
    <string name="choose_user">Выберите игрока</string>
    <string name="info">Инфо</string>
    <string name="no_instagram">Нет инстаграмма</string>
    <string name="comlete">Завершить</string>
    <string name="you_win">Вы выиграли!</string>
    <string name="you_lose">Вы проиграли!</string>
    <string name="draw">Ничья!</string>
    <string name="waiting_opponent">Ожидание соперника ...</string>
    <string name="send_message">Напишите нам</string>
    <string name="about_us">О нас</string>
    <string name="notification">Уведомления</string>
    <string name="setttings">Настройки</string>
    <string name="cant_finish">Вы не можете выйти пока не закончите дуэль</string>
    <string name="you_received">Вы получили:</string>
    <string name="question">Вопрос:</string>
    <string name="truesd">Правильно:</string>
    <string name="excelent">Отлично!</string>
    <string name="good">Хорошо!</string>
    <string name="not_bad">Удовлетворительно!</string>
    <string name="bad">Плохо!</string>
    <string name="university">Университеты</string>
    <string name="about_us_text">Synak time –это социальный проект.   Цель Synak time – оказание помощи для успешной сдачи ОРТ и поступлении в лучшие Высшие учебные заведения.   Вы поддержите наш проект, просматривая рекламу, и обогатите наш контент, присылая свои вопросы. Благодарим Вас за понимание!   При разработке разделов «Подготовка к ОРТ» и «Инфо» были использованы данные с сайта http://testing.kg/kg/ , «Университеты» - с сайта Министерства образовании и науки КР http://www.university.edu.gov.kg/.</string>
    <string name="subscribe_us">Подписывайтесь на наши соц. страницы:</string>
    <string name="btn_confirm_code">Подтвердить код</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="change_password">Смена пароля</string>
    <string name="enter_password">Введите пароль:</string>
    <string name="repeat_password">Повторите пароль:</string>
    <string name="btn_change_password">сменить пароль</string>
    <string name="enter_phone">Введите номер телефона:</string>
    <string name="restore_password">Востановить пароль</string>
    <string name="win">Выигравший</string>
    <string name="lose">Проигравший</string>
    <string name="start">Начать</string>
    <string name="read_text">Читать текст</string>
    <string name="no_question">Задач нет</string>
    <string name="you">Вы</string>
    <string name="win_20">Выигравший: 20</string>
    <string name="lose_10">Проигравший: -10</string>
    <string name="draw_5">Ничья: 5</string>
    <string name="lang_you_know">Какие языки вы знаете?:</string>
    <string name="save">сохранить</string>
    <string name="send_message_text">В случае выявления каких-либо ошибок в вопросах и ответах, просим Вас сообщить нам, указывая категорию, вариант и номер вопроса. Пример: Основной тест, Математика 1 часть, 1-вариант, 5й вопрос.   Вы также можете поддержать и внести свой вклад в развитие нашего социального проекта. Присылайте интересные вопросы с ответами, и после тщательной проверки, мы обязательно опубликуем их, подписав их вашим никнеймом.    Мы глубоко ценим ваше мнение о нашем проекте. Вы можете оставить отзыв при выявлении каких-либо неполадок и недоработок в приложении.</string>
    <string name="rating">Рейтинг</string>
    <string name="test_count_day">Количество тестов за сегодня :</string>
    <string name="aaaa">Из них:</string>
    <string name="true_f">Правильно:</string>
    <string name="false_f">Неправильно:</string>
    <string name="win_f">Выигрыш:</string>
    <string name="draw_">Ничья:</string>
    <string name="lose_f">Проигрыш:</string>
    <string name="week">неделя</string>
    <string name="mnth">месяц</string>
    <string name="year">год</string>
    <string name="count_us">Оцените Нас</string>


    <string-array name="regions">
        <item>г. Бишкек</item>
        <item>г. Ош</item>
        <item>Жалалабадская область</item>
        <item>Ошская область</item>
        <item>Баткенская область</item>
        <item>Нарынская область</item>
        <item>Таласская область</item>
        <item>Ыссык-кульская область</item>
        <item>Чуйская область</item>
        <item></item>
    </string-array>
    <string name="title_activity_test_add">TestAddActivity</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="redact_profile">Редактировать профиль</string>
    <string name="invite_friend">Пригласить друзей</string>
    <string name="random_player">Случайный</string>
    <string name="app_id_ad_mob">ca-app-pub-7649587179327452~9914538335</string>
    <string name="ad_video_id">ca-app-pub-7649587179327452/8399627756</string>
    <string name="no_exit">Вы не можете выйти, не завершив тест!</string>
    <string name="want_exit">Хотите выйти?</string>
    <string name="search_users">Поиск игрока ...</string>
    <string name="answer">Комментировать</string>
    <string name="delete_friend">Хотите удалить из друзей?</string>
    <string name="add_friend">Хотите добавить в друзья?</string>
    <string name="friends">Мои друзья</string>
    <string name="open">Показать ответы</string>
    <string name="topic_create">создать вопрос</string>
    <string name="desc">Описание</string>
    <string name="back">Вернуться</string>
    <string name="ssss">создать</string>
    <string name="my_topics">Мои темы</string>
    <string name="delete">Хотите удалить?</string>
    <string name="close">Закрыть</string>
    <string name="payed">Вам открыт доступ к тестам:  </string>
    <string name="more220">Поздравляем, вы получили золотой сертификат!</string>
    <string name="more200">Поздравляем, вы получили отличный балл!</string>
    <string name="more150">Поздравляем!</string>
    <string name="more110">Поздравляем, вы набрали проходной балл!</string>
    <string name="more0">Сожалеем вы не набрали проходной балл, вам стоит больше трудиться!</string>
    <string name="test_test">Пробный тест</string>
    <string name="trues">Правильные</string>
    <string name="analog">Окшоштуктар жана сүйлөмдөрү толуктоо</string>
    <string name="understand">Окуу жана түшүнүү</string>
    <string name="grammar">Кыргыз тилинин практикалык грамматикасы</string>
    <string name="how_test">Как пройти тест?</string>
    <string name="history">История</string>
    <string name="ready_to_start">Вы готовы начать</string>

</resources>
