<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="100dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/auth"
        android:textColor="#019FB3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/login"
        android:hint="@string/phone"
        android:textColor="#000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:inputType="textPassword"
        android:id="@+id/password"
        android:hint="@string/password"
        android:textColor="#000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/btn_accept"
        android:textColor="@color/white"
        android:layout_margin="15dp"
        android:background="@drawable/blue_5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:gravity="center"
        android:id="@+id/forgot_password"
        android:text="@string/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>