<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textColor="#019FB3"
        android:textSize="21sp"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/avatar"
            android:src="@drawable/avatar_place_holder"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <EditText
            android:inputType="text"
            android:id="@+id/name"
            android:hint="@string/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:text="+996"
            android:inputType="phone"
            android:id="@+id/login"
            android:hint="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/repeat_password"
            android:hint="@string/repair_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:inputType="none"
            android:id="@+id/birth_date"
            android:hint="@string/birth"
            android:layout_width="match_parent"
            android:layout_height="35dp"/>

        <View
            android:background="#999"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <Spinner
            android:drawSelectorOnTop="true"
            android:entries="@array/regions"
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:text="@string/lang_you_know"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:checked="true"
            android:id="@+id/ru"
            android:text="Русский"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:checked="true"
            android:id="@+id/kg"
            android:text="Кыргызча"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <Button
        android:id="@+id/btn_sign_up"
        android:background="#02BBBB"
        android:textColor="@color/white"
        android:text="@string/btn_register"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>