<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.settings.SettingsActivity">

    <LinearLayout
        android:id="@+id/line_lang"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:textStyle="bold"
        android:text="@string/lang"
        android:textSize="18sp"
        android:textColor="#000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:text="Кыргыз тили"
            android:id="@+id/kg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:text="Русский язык"
            android:id="@+id/ru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </RadioGroup>

    <View
        android:layout_marginTop="5dp"
        android:background="#999"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_below="@+id/line_lang"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#000"
        android:text="@string/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Switch
        android:id="@+id/switch_notification"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/line_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:layout_below="@+id/switch_notification"
        android:layout_marginTop="5dp"
        android:background="#999"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <Button
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/btn_save"
        android:id="@+id/btn_edit_profile"
        android:textColor="@color/white"
        android:text="@string/redact_profile"
        android:layout_width="match_parent"
        android:background="@drawable/blue_5dp"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/btn_save"
        android:textColor="@color/white"
        android:text="@string/btn_save"
        android:background="@drawable/blue_5dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>