<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textColor="@color/colorTextGrey"
        android:textStyle="bold"
        android:layout_marginTop="5dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:backgroundTint="@color/colorTextGrey"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorTextGrey"
            android:maxLines="1"
            android:textColor="@color/colorTextGrey"
            tools:ignore="UnusedAttribute" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:backgroundTint="@color/colorTextGrey"
            android:inputType="textPassword"
            android:textColorHint="@color/colorTextGrey"
            android:maxLines="1"
            android:textColor="@color/colorTextGrey"
            tools:ignore="UnusedAttribute" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signInOnDialog"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:drawableRight="@drawable/ic_arrow_right_24dp"
        android:drawableEnd="@drawable/ic_arrow_right_24dp"
        android:text="@string/sign_in"
        android:background="@drawable/green_button"
        android:textColor="@color/colorTextGrey"
        android:layout_marginBottom="20dp"/>

</LinearLayout>