<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay">

        <FrameLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="Example" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="15sp"
                        android:text="@string/choose_user"
                        android:textColor="#fff"
                        android:gravity="center"
                        android:layout_toStartOf="@id/share"
                        android:layout_centerInParent="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:padding="5dp"
                        android:id="@+id/my_friend"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_friend"
                        android:layout_alignParentEnd="true"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>

                    <ImageView
                        android:padding="5dp"
                        android:id="@+id/share"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_share"
                        android:layout_toStartOf="@+id/my_friend"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>


        </FrameLayout>

    </android.support.design.widget.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


    <EditText
        android:paddingStart="10dp"
        android:inputType="text"
        android:paddingEnd="5dp"
        android:layout_margin="5dp"
        android:drawableEnd="@drawable/ic_search_black_24dp"
        android:id="@+id/search"
        android:layout_below="@+id/appbar"
        android:hint="@string/search_users"
        android:background="@drawable/black_stroke_1dp_circle"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_below="@+id/search"
        android:layout_margin="10dp"
        android:layout_above="@id/random"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <Button
        android:text="@string/random_player"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:id="@+id/random"
        android:layout_alignParentBottom="true"
        android:background="@drawable/blue_5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>